--- a/src/itemstack.css
+++ b/src/itemstack.css
@@ -11,6 +11,9 @@
   margin-left: 3px;
   word-spacing: 3px;
 }
+.item-display:first-child{
+  margin-left: 0;
+}
 .item-display .icon img {
   width: 30px;
   height: 30px;
@@ -30,7 +33,7 @@
   z-index: 1;
   position: fixed;
   border: 3px solid #23005a;
-  padding: 7px 10px 5px 5px;
+  padding: 7px 10px 0 5px;
   background-color: rgba(15, 0, 15, 0.8);
   color: #fbfbfb;
   font-family: 'Minecraftia';
